Proceed with auth

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,9 @@
 {
+  "Jwt": {
+    "Key": "some_random_key",
+    "Issuer": "test.com",
+    "Audience": "test.com"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
