--- a/Winter.csproj
+++ b/Winter.csproj
@@ -25,9 +25,10 @@
     </Target>
     
     <!-- auto generating json file on each build -->
-    <Target Name="CreateSwaggerJson" AfterTargets="Build" Condition="$(Configuration)=='Debug'">
-		<Exec Command="dotnet swagger tofile --output ./swagger.json $(OutputPath)$(AssemblyName).dll v1" WorkingDirectory="$(ProjectDir)" />
-	</Target>
+    <Target Name="CreateSwaggerJson" AfterTargets="PostBuildEvent" Condition="'$(Configuration)' == 'SwaggerConfig'">
+        <Exec Command="dotnet tool restore" />
+        <Exec Command="dotnet swagger tofile --output ./swagger.json $(OutputPath)$(AssemblyName).dll v1" WorkingDirectory="$(ProjectDir)" />
+    </Target>
     
     <!-- exclude scripts folder from the build -->
     <ItemGroup>
