Docker db container

--- a/appsettings.json
+++ b/appsettings.json
@@ -12,6 +12,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Local": "server=localhost;user=root;password=;database=winter;"
+    "Local": "server=localhost;user=root;password=;database=winter;SSL Mode=None"
   }
 }
