Dotnet e2e tests base impl

--- a/Main/Main.csproj
+++ b/Main/Main.csproj
@@ -24,6 +24,10 @@
     <ItemGroup>
         <Compile Remove="Scripts\**"/>
     </ItemGroup>
+    
+    <ItemGroup>
+        <InternalsVisibleTo Include="e2e" />
+    </ItemGroup>
 
     <ItemGroup>
         <PackageReference Include="Ardalis.SmartEnum" Version="7.0.0"/>
